--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@fontsource/open-sans/400.css";
+@import "~@fontsource/open-sans/400-italic.css";
+@import "~@fontsource/open-sans/700.css";
+@import "~@fontsource/open-sans/700-italic.css";
+@import "~@fontsource/roboto-mono";
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
