--- a/client/src/app/panel-layout/panel-layout.component.html
+++ b/client/src/app/panel-layout/panel-layout.component.html
@@ -16,6 +16,7 @@
         }"
     >
         <div [ngSwitch]="getPanelType(panel)">
+            <app-score-difference-panel *ngSwitchCase="'score-difference'" [panel]="$any(panel.panel)" [size]="panel.size"></app-score-difference-panel>
             <app-unpopular-score-panel *ngSwitchCase="'unpopular-score'" [panel]="$any(panel.panel)" [size]="panel.size"></app-unpopular-score-panel>
             <app-special-award-panel *ngSwitchCase="'special-award'" [panel]="$any(panel.panel)"></app-special-award-panel>
         </div>
