--- a/client/src/app/panel-layout/panel-layout.component.html
+++ b/client/src/app/panel-layout/panel-layout.component.html
@@ -15,6 +15,8 @@
             'grid-row-end': panel.position.endRow + 1
         }"
     >
-        panel
+        <div [ngSwitch]="getPanelType(panel)">
+            <app-unpopular-score-panel *ngSwitchCase="'unpopular-score'" [panel]="$any(panel.panel)" [size]="panel.size"></app-unpopular-score-panel>
+        </div>
     </div>
 </div>
