Improve table formatting

--- a/client/src/app/panel-layout/panel-layout.component.scss
+++ b/client/src/app/panel-layout/panel-layout.component.scss
@@ -1,7 +1,7 @@
 .panel-grid {
     display: grid;
     grid-template-columns: repeat(var(--columns), 1fr);
-    grid-template-rows: repeat(var(--rows), 1fr);
+    grid-template-rows: repeat(var(--rows), 115px);
     grid-gap: 10px;
 
     .panel {
