Initial implementation of series direction component
Still a lot of tuning to go

--- a/client/src/app/panel-layout/panel-layout.component.html
+++ b/client/src/app/panel-layout/panel-layout.component.html
@@ -19,6 +19,7 @@
             <app-score-difference-panel *ngSwitchCase="'score-difference'" [panel]="$any(panel.panel)" [size]="panel.size"></app-score-difference-panel>
             <app-unpopular-score-panel *ngSwitchCase="'unpopular-score'" [panel]="$any(panel.panel)" [size]="panel.size"></app-unpopular-score-panel>
             <app-special-award-panel *ngSwitchCase="'special-award'" [panel]="$any(panel.panel)"></app-special-award-panel>
+            <app-series-direction-correlation-panel *ngSwitchCase="'series-direction'" [panel]="$any(panel.panel)"></app-series-direction-correlation-panel>
         </div>
     </div>
 </div>
