--- a/client/src/app/panel-layout/panel-layout.component.scss
+++ b/client/src/app/panel-layout/panel-layout.component.scss
@@ -5,6 +5,7 @@
     grid-gap: 10px;
 
     .panel {
+        position: relative;
         border: 1px solid black;
         border-radius: 2px;
     }
