--- a/client/src/app/opinions/opinions.component.html
+++ b/client/src/app/opinions/opinions.component.html
@@ -1,8 +1,8 @@
-<app-progress-bar *ngIf="pendingJob && !pendingJob.failed" [intervals]="loadingIntervals" [progress]="loadingProgress"></app-progress-bar>
+<app-progress-bar *ngIf="loading || (pendingJob && !pendingJob.failed)" [intervals]="loadingIntervals" [progress]="loadingProgress"></app-progress-bar>
 <div class="status">
     <span class="statusDescription">{{statusDescription}}</span>
     <span class="eta" *ngIf="pendingJob && pendingJob.completed && pendingJob.now">{{loadingEstimatedCompletionTime}} seconds</span>
-    <button (click)="startJob()">Update</button>
+    <button [disabled]="loading" (click)="startJob()">Update</button>
 </div>
 <app-dom-image *ngIf="results">
     <div class="container">
