--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,4 +7,12 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
+}
+
+.content {
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+    max-width: 1280px;
 }
