Add some manga-style screentone to the home page

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="hero">
+    <div class="halftone"></div>
     <div class="inner">
         <h1>WrongOpinions.moe</h1>
         <form (ngSubmit)="go()">
