Experimenting with more screentone

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,6 +10,7 @@
     </div>
 </div>
 <div class="contentContainer">
+    <div class="halftone"></div>
     <div class="content">
         <h2>FAQ</h2>
         <dl class="faq">
