Initial work on drawing manga-style panel boundaries

--- a/client/src/app/panel-layout/panel-layout.component.html
+++ b/client/src/app/panel-layout/panel-layout.component.html
@@ -1,3 +1,4 @@
+<app-panel-outlines [columns]="columns" [rows]="rows" [panelLayout]="panelLayout" [gaps]="10" [margins]="5" [columnWidth]="500" [rowHeight]="130"></app-panel-outlines>
 <div
     class="panel-grid"
     [ngStyle]="{
