--- a/client/src/app/panel-layout/panel-layout.component.scss
+++ b/client/src/app/panel-layout/panel-layout.component.scss
@@ -1,3 +1,6 @@
+app-panel-outlines {
+    // position: absolute;
+}
 .panel-grid {
     display: grid;
     grid-template-columns: repeat(var(--columns), 1fr);
