Add in some credit comments for some techniques I'm using

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -42,6 +42,7 @@
 }
 
 
+// Adapted from https://css-irl.info/css-halftone-patterns/
 .halftone {
     --min-dot-size: 0.2px;
     --max-dot-size: 7px;
