--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -32,7 +32,7 @@
         mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 90%), transparent 200px, transparent),
             radial-gradient(circle at center, black, transparent 150px),
             radial-gradient(circle at center, black, transparent 150px),
-            linear-gradient(to right, black, transparent calc(50% - 750px), transparent calc(50% + 750px), black);
+            linear-gradient(to right, black calc(50% - 900px), transparent calc(50% - 750px), transparent calc(50% + 750px), black calc(50% + 900px));
 
         mask-position: 0 0, -800px 0px, 800px 110px;
         mask-size: 100% 100%, 100% 220px, 100% 220px;
