Home page wording tweaks

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="inner">
         <h1>WrongOpinions.moe</h1>
         <form (ngSubmit)="go()">
-            <label for="username">Username: </label>
+            <label for="username">MyAnimeList username:</label>
             <input name="username" type="text" [(ngModel)]="username" />
             <button type="submit">Go</button>
         </form>
@@ -21,7 +21,7 @@
                     to automatically detect objectively incorrect anime-related opinions that you hold.
                 </p>
                 <p>
-                    You can kind of think of it as like The Anime Man's "Roasting *'s HORRIBLE Taste in Anime" series,
+                    You can kind of think of it as like The Anime Man's "Roasting _____'s HORRIBLE Taste in Anime" series,
                     but for people who Joey doesn't even know exist. (Like you)
                 </p>
                 <p>
