Home page layout
I guess I forgot to commit this too

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -23,6 +23,20 @@
     }
 }
 
+form {
+    margin: auto;
+    width: 300px;
+    max-width: 90vw;
+
+    > * {
+        display: block;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        box-sizing: border-box;
+    }
+}
+
 .contentContainer {
     position: relative;
 
