--- a/client/src/app/opinions/opinions.component.html
+++ b/client/src/app/opinions/opinions.component.html
@@ -1,37 +1,43 @@
-<app-progress-bar *ngIf="loading || (pendingJob && !pendingJob.failed)" [intervals]="loadingIntervals" [progress]="loadingProgress"></app-progress-bar>
-<div class="status">
-    <span class="statusDescription">{{statusDescription}}</span>
-    <span class="eta" *ngIf="pendingJob && pendingJob.completed && pendingJob.now">{{loadingEstimatedCompletionTime}} seconds</span>
-    <button [disabled]="loading" (click)="startJob()">Update</button>
-</div>
-<app-dom-image *ngIf="results">
-    <div class="container">
-        <span class="fineprint">wrongopinions.moe</span>
-        <div class="titleRow">
-            <div class="icon" [ngStyle]="{
-                'background-image': 'url(' + getBakaIcon() + ')'
-            }"></div>
-            <div class="usernameContainer">
-                <div class="username">{{results.username}}</div>
-                <div class="bakaRank">
-                    <span class="bakaRankName">{{results.bakaRank.name}}</span>
-                    <div class="bakaRankCaption">
-                        <div class="measurement">{{results.bakaRank.description}}</div>
-                        <div class="visible">{{results.bakaRank.description}}</div>
+<div class="content">
+    <h1>WrongOpinions.moe</h1>
+    <h2>{{username}}</h2>
+    <app-progress-bar *ngIf="loading || (pendingJob && !pendingJob.failed)" [intervals]="loadingIntervals" [progress]="loadingProgress"></app-progress-bar>
+    <div class="status">
+        <span class="statusDescription">{{statusDescription}}</span>
+        <span class="eta" *ngIf="pendingJob && pendingJob.completed && pendingJob.now">~{{loadingEstimatedCompletionTime}}</span>
+        <button [disabled]="loading" (click)="startJob()">{{ pendingJob ? 'Resubmit' : 'Update'}}</button>
+    </div>
+    <app-dom-image *ngIf="results" (dataUrl)="dataUrlChanged($event)">
+        <div class="container">
+            <span class="fineprint">WrongOpinions.moe</span>
+            <div class="titleRow">
+                <div class="icon" [ngStyle]="{
+                    'background-image': 'url(' + getBakaIcon() + ')'
+                }"></div>
+                <div class="usernameContainer">
+                    <div class="username">{{results.username}}</div>
+                    <div class="bakaRank">
+                        <span class="bakaRankName">{{results.bakaRank.name}}</span>
+                        <div class="bakaRankCaptionContainer">
+                            <div class="bakaRankCaption">
+                                <div class="measurement">{{results.bakaRank.description}}</div>
+                                <div class="visible">{{results.bakaRank.description}}</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bakaScoreContainer">
+                    <div class="bakaScoreTitle">
+                        Baka Score:
+                    </div>
+                    <div class="bakaScore">
+                        {{ results.bakaScore | number : '1.0-0' }}
                     </div>
                 </div>
             </div>
-            <div class="bakaScoreContainer">
-                <div class="bakaScoreTitle">
-                    Baka Score:
-                </div>
-                <div class="bakaScore">
-                    {{ results.bakaScore | number : '1.0-0' }}
-                </div>
+            <div class="awardsArea">
+                <app-panel-layout [columns]=2 [rows]=8 [panels]="panels"></app-panel-layout>
             </div>
         </div>
-        <div class="awardsArea">
-            <app-panel-layout [columns]=2 [rows]=8 [panels]="panels"></app-panel-layout>
-        </div>
-    </div>
-</app-dom-image>
+    </app-dom-image>
+</div>
