--- a/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.html
+++ b/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.html
@@ -1,2 +1,5 @@
-<canvas #canvas></canvas>
-<div class="title">{{ seriesName }}</div>
+<h3>Did you watch in the wrong order?</h3>
+<div class="container">
+    <canvas #canvas></canvas>
+    <div class="title">{{ seriesName }}</div>
+</div>
