--- a/client/src/app/panels/special-award/special-award.component.html
+++ b/client/src/app/panels/special-award/special-award.component.html
@@ -2,7 +2,7 @@
     <div class="icon" [ngStyle]="{
         'background-image': 'url(' + properties.icon + ')'
     }"></div>
-    <div class="name">{{ panel.award.name }}</div>
+    <h3 class="name">{{ panel.award.name }}</h3>
     <div class="description">{{ panel.award.description }}</div>
     <div class="reason">{{ panel.award.reason }}</div>
     <div class="contributingAnime">
