--- a/client/src/app/panels/unpopular-score/unpopular-score.component.html
+++ b/client/src/app/panels/unpopular-score/unpopular-score.component.html
@@ -1,3 +1,4 @@
+<h3>Absolutely awful takes:</h3>
 <div class="container">
     <div class="column" *ngFor="let column of animeByColumns">
         <table>
