--- a/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
+++ b/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
@@ -1,10 +1,30 @@
 :host {
-    display: block;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+h3 {
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.tagline {
+    
+}
+
+.container {
+    flex: 1;
+    flex-grow: 1;
+    display: block;
+    position: relative;
 }
 
 .title {
