--- a/client/src/app/panels/special-award/special-award.component.scss
+++ b/client/src/app/panels/special-award/special-award.component.scss
@@ -21,7 +21,11 @@
 }
 
 .name {
+    display: block;
     position: absolute;
+    
+    margin: 0;
+    padding: 0;
 
     left: 90px;
     right: 90px;
@@ -59,7 +63,7 @@
     
     top: 0;
     height: 85px;
-    right: 0;
+    right: 5px;
     width: 80px;
 
     overflow: hidden;
