--- a/client/src/app/opinions/opinions.component.scss
+++ b/client/src/app/opinions/opinions.component.scss
@@ -127,6 +127,12 @@ app-dom-image {
     }
 }
 
+.renderedImage {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+}
+
 .sharing {
     display: flex;
     flex-direction: row;
