Use user-provided casing for username in image

--- a/client/src/app/opinions/opinions.component.html
+++ b/client/src/app/opinions/opinions.component.html
@@ -15,7 +15,7 @@
                     'background-image': 'url(' + getBakaIcon() + ')'
                 }"></div>
                 <div class="usernameContainer">
-                    <div class="username">{{results.username}}</div>
+                    <div class="username">{{username}}</div>
                     <div class="bakaRank">
                         <span class="bakaRankName">{{results.bakaRank.name}}</span>
                         <div class="bakaRankCaptionContainer">
