Add an FAQ about jobs that fail to submit

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -87,6 +87,28 @@
                 </p>
             </dd>
 
+            <dt>I get "Failed to submit job, please try again later"</dt>
+            <dd>
+                <p>
+                    Does your profile exist? You probably spelt it wrong.
+                </p>
+                <p>
+                    Is it set to private? How do you expect me to read that, huh?
+                </p>
+                <p>
+                    Do you have thousands of shows in your list? Ok first, get a life.
+                    Failing that, wait two minutes and try again. If you have a lot of anime
+                    in your list it can take us a while to initialise your job. Due to
+                    technical limitations we tell you that it's failed if it takes more thousands
+                    30 seconds, but we'll actually keep trying in the background.
+                </p>
+                <p>
+                    None of the above? I don't know, you're probably cursed. You can try
+                    <a href="https://github.com/JoshuaWalsh/wrongopinions/issues" target="_blank">submitting an issue on GitHub</a>
+                    or consulting an Axis Cult priest.
+                </p>
+            </dd>
+
             <dt>I want to know which of my manga opinions are wrong too!</dt>
             <dd>
                 <p>
